# incremental

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  NEWS.rst  README.rst  codecov.yaml  examplesetup.py  incremental.IncomparableVersions.html  incremental.Version.html  incremental._Inf.html  incremental._version.html  incremental.html  incremental.tests.html  incremental.tests.test_update.CreatedUpdateInSrcTests.html  incremental.tests.test_update.CreatedUpdateTests.html  incremental.tests.test_update.MissingTests.html  incremental.tests.test_update.NonCreatedUpdateTests.html  incremental.tests.test_update.ScriptTests.html  incremental.tests.test_update.html  incremental.tests.test_version.VersionsTests.html  incremental.tests.test_version.html  incremental.update.FilePath.html  incremental.update._ReadableWritable.html  incremental.update.html  index.html  moduleIndex.html  mypy.ini  pyproject.toml  setup.cfg  setup.py  towncrier.ini  tox.ini  undoccedSummary.html
.travis/: build_docs.sh
docs/: all-documents.html  classIndex.html  fullsearchindex.json  incremental.IncomparableVersions.html  incremental.Version.html  incremental._Inf.html  incremental.__init__.html  incremental._inf.html  incremental._version.html  incremental.html  incremental.tests.__init__.html  incremental.tests.html  incremental.tests.test_update.CreatedUpdateInSrcTests.html  incremental.tests.test_update.CreatedUpdateTests.html  incremental.tests.test_update.MissingTests.html  incremental.tests.test_update.NonCreatedUpdateTests.html  incremental.update.html  (+13 more)
(+29 files in other folders)
