[metadata]
name = incremental
version = attr: incremental._setuptools_version
maintainer = Amber Brown
maintainer_email = hawkowl@twistedmatrix.com
url = https://github.com/twisted/incremental
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
description = "A small library that versions your Python projects."
long_description = file: README.rst
install_requires =
    typing >= 3.7.4.3; python_version < '3.5'

[options]
packages = find:
package_dir = =src
zip_safe = False

[options.packages.find]
where = src
exclude = exampleproj

[options.package_data]
incremental = py.typed

[options.entry_points]
distutils.setup_keywords =
    use_incremental = incremental:_get_version

[options.extras_require]
scripts =
    click>=6.0
    twisted>=16.4.0
mypy =
    %(scripts)s
    mypy==0.812

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore =
   E203,  # whitespace before : is not PEP8 compliant (& conflicts with black)
